--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -6,22 +6,21 @@
 <div class="container">
 	{% if app.user %}
 		<div class="mb-3">
-			You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+			Bonjour {{ app.user.username }}<br><a href="{{ path('app_logout') }}" class="btn btn-danger">Logout</a>
 		</div>
+		{% else  %}
+			<div class="mb-3">
+				<a href="{{ path('app_login') }}" class="btn btn-primary">Login</a>
+			</div>
 	{% endif %}
-	<style>
-		.example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-		.example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-	</style>
+	<div class="row">
+		<div class="col-2">
 
-	<div class="example-wrapper">
-		<h1>Hello {{ controller_name }}! ✅</h1>
-
-		This friendly message is coming from:
-		<ul>
-			<li>Your controller at <code><a href="{{ 'C:/wamp64/www/rpg_quizz-master/src/Controller/AcceuilController.php'|file_link(0) }}">src/Controller/AcceuilController.php</a></code></li>
-			<li>Your template at <code><a href="{{ 'C:/wamp64/www/rpg_quizz-master/templates/acceuil/index.html.twig'|file_link(0) }}">templates/acceuil/index.html.twig</a></code></li>
-		</ul>
+			{% if app.user %}
+				<br>
+				<a href="{{ path('persona_index') }}">Personnage</a>
+			{% endif %}
+		</div>
 	</div>
 </div>
 {% endblock %}
