--- a/templates/persona/index.html.twig
+++ b/templates/persona/index.html.twig
@@ -29,10 +29,8 @@
                     </div>
                 </div>
                         {% else %}
-                            <tr>
-                                <td colspan="6">You don't have any Persona</td><br>
+                                <span >You don't have any Persona</span><br>
                                 <a href="{{ path('persona_new') }}" class="btn btn-primary">Create One</a>
-                            </tr>
                         {% endif %}
 
             </div>
