--- a/templates/persona/edit.html.twig
+++ b/templates/persona/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('persona/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('persona_index') }}">back to list</a>
+    <a href="{{ path('persona_index') }}" class="btn btn-primary">back to list</a>
 
     {{ include('persona/_delete_form.html.twig') }}
 {% endblock %}
