--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,7 +34,7 @@
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 			
 			<div class="btn-connexion">
-				<button class="btn btn-primary boutton" type="submit">Connexion</button>
+				<button class="btn btn-primary bouton" type="submit">Connexion</button>
 			</div>
 		</form>
 		
