CGU et Mentions légales

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
 	</head>
     <body>
     <a href="{{ path('acceuil') }}" class="btn btn-success">Home</a>
+    <a href="{{ path('cgu') }}" class="btn btn-outline-info">CGU</a>
+    <a href="{{ path('mentions_legales') }}" class="btn btn-outline-info">Mentions Légales</a>
     <br>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
