--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -24,7 +24,7 @@
 			{{ form_row(registrationForm.agreeTerms) }}
 
 			<div class="btn-connexion">
-				<button class="btn">Enregistrer.</button>
+				<button class="btn btn-outline-primary">{{ 'register'|trans }}</button>
 			</div>
 		{{ form_end(registrationForm) }}
 	</div>
