--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AcceuilController!{% endblock %}
+{% block title %}RPG Quizz{% endblock %}
 
 {% block body %}
 <div class="container">
@@ -14,15 +14,15 @@
         {% else %}
             {# Si l'utilisateur a un personnage alors on joue #}
             <div class="row">
-                <div id="image_acceuil" class="col-6">
-                    <img src="{{ app.user.persona.avatar }}" class="rounded taille_image_acceuil" >
+                <div id="image_accueil" class="col-6">
+                    <img src="{{ app.user.persona.avatar }}" class="rounded taille_image_accueil" alt="" >
                 </div>
 
-                <div id="action_acceuil" class="col-4 boutton_jeu">
-                    <div class="margin_1">
+                <div id="action_accueil" class="col-4 boutton_jeu">
+                    <div class="my-1">
                         <a class='btn btn-info' href='{# { path('') } #}'> Combat !!! </a>
                     </div>
-                    <div class="margin_1">
+                    <div class="my-1">
                         <a class='btn btn-info' href='{# { path('') } #}'> Entrainement </a>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         {% endif %}
     {% else  %}
         <div class="mb-3">
-                <a href="{{ path('app_login') }}" class="btn btn-primary">Login</a>
+
         </div>
     {% endif %}
 </div>
