--- a/templates/persona/show.html.twig
+++ b/templates/persona/show.html.twig
@@ -3,36 +3,33 @@
 {% block title %}Persona{% endblock %}
 
 {% block body %}
-    <h1>Persona</h1>
+    <h1>Votre personnage</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ persona.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ persona.name }}</td>
-            </tr>
-            <tr>
-                <th>Level</th>
-                <td>{{ persona.level }}</td>
-            </tr>
-            <tr>
-                <th>Avatar</th>
-                <td>{{ persona.avatar }}</td>
-            </tr>
-            <tr>
-                <th>Sex</th>
-                <td>{{ persona.sex }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
 
-    <a href="{{ path('persona_index') }}">back to list</a>
+                {% if app.user and persona %}
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="{{ persona.avatar }}" class="rounded-circle border border-dark" width="75" height="75">
+                        </div>
+                        <div class="card-header">
+                            <h2 class="font-weight-bold">{% if persona.sex == 1 %}
+                                    &#9794;
+                                {% elseif persona.sex == 2 %}&#9792;
+                                {% elseif persona.sex == 3 %}&#9893;
+                                {% endif %} {{ persona.name }}</h2>
+                            <div class="card-body">
+                                Personnage niveau {{ persona.level }}.
+                            </div>
+                            {#{{ persona.id }}#}
+                            <a href="{{ path('persona_edit', {'id': persona.id}) }}" class="btn btn-primary">edit</a>
+                        </div>
+                    </div>
+                {% endif %}
 
-    <a href="{{ path('persona_edit', {'id': persona.id}) }}">edit</a>
-
-    {{ include('persona/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
