ajout page accueil anonyme

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,9 @@
 </head>
 <body style="padding-top:90px;" class="bg-light">
 
+{% set url = path(app.request.attributes.get('_route'),
+    app.request.attributes.get('_route_params')) %}
+
 <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
     <div class="">
         <a href="{{ path('accueil') }}" class="navbar-brand">
@@ -22,9 +25,7 @@
     </div>
     <div id="navbarDrop" class="navbar-collapse collapse">
     {% if app.user %}
-
         {% include 'logged.html.twig' %}
-
     {% else %}
         {% include 'anon.html.twig' %}
     {% endif %}
@@ -44,7 +45,15 @@
 
 <br>
 
+{% if app.user == false and url|length <= 1%}
+
+    {% include 'anon_body.html.twig' %}
+
+{% endif %}
+
 {% block body %}{% endblock %}
+
+
 
 {% block javascripts %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
